--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>1. iOS安装 <a href="https://223.223.204.104:9204/ipa/taroversion.crt">证书</a><br/>(如果之前尚未安装过此证书，请先安装证书)</h1>
 <br/>
-<h1>2. iOS安装 <a href="itms-services://?action=download-manifest&url=https://github.com/liuyudong/taro/blob/master/manifest.plist">游戏包</a></h1>
+<h1>2. iOS安装 <a href="itms-services://?action=download-manifest&url=https://liuyudong.github.io/taro/manifest.plist">游戏包</a></h1>
 <br/>
 <h1>3. Android安装 <a href="http://223.223.204.104:9203/ipa/Taro.apk">游戏包</a></h1>
 </body>
