--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 <h1>iOS安装 <a href="itms-services://?action=download-manifest&url=https://liuyudong.github.io/taro/manifest.plist">游戏包</a></h1>
 <br/>
-<h1>Android安装 <a href="http://taro.suimugame.com:9203/ipa/Taro.apk">游戏包</a></h1>
+<h1>Android安装 <a href="http://res.ynds.suimugame.cn:9203/ipa/Taro.apk">游戏包</a></h1>
 <br/>
-<h1>uwa <a href="http://taro.suimugame.com:9203/ipa/UWATool_Android.apk">UWA</a></h1>
+<h1>uwa <a href="http://res.ynds.suimugame.cn:9203/ipa/UWATool_Android.apk">UWA</a></h1>
 <br/>
 </body>
 </html>
